--- a/html/Course.html
+++ b/html/Course.html
@@ -40,7 +40,12 @@
                             <a href='./Course.html'>
                                 My Courses
                             </a>
-                        </div>  
+                        </div> 
+                        <div class="menu-item">
+                            <a href='./CourseTeacher.html'>
+                                Teacher Courses
+                            </a>
+                        </div>   
                     </div>
                     
                 </div>
