--- a/html/Project.html
+++ b/html/Project.html
@@ -35,7 +35,12 @@
                             <a href='./Course.html'>
                                 My Courses
                             </a>
-                        </div>  
+                        </div> 
+                        <div class="menu-item">
+                            <a href='./CourseTeacher.html'>
+                                Teacher Courses
+                            </a>
+                        </div>    
                     </div>
                     
                 </div>
@@ -69,9 +74,16 @@
                                             <a class="name" href='#'>
                                                 Project 1
                                             </a>
-                                            <div class="action">     
-                                                <button class="edit"> <i class="fas fa-pen"></i></button>
-                                                <button class="delete"><i class="far fa-trash-alt"></i></button>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
                                             </div>
                                         </div>      
                                     </div>
@@ -85,9 +97,16 @@
                                             <a class="name" href='#'>
                                                 Project 1
                                             </a>
-                                            <div class="action">     
-                                                <button class="edit"> <i class="fas fa-pen"></i></button>
-                                                <button class="delete"><i class="far fa-trash-alt"></i></button>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
                                             </div>
                                         </div>        
                                     </div>
@@ -101,9 +120,16 @@
                                             <a class="name" href='#'>
                                                 Project 1
                                             </a>
-                                            <div class="action">     
-                                                <button class="edit"> <i class="fas fa-pen"></i></button>
-                                                <button class="delete"><i class="far fa-trash-alt"></i></button>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
                                             </div>
                                         </div>       
                                     </div>
@@ -117,9 +143,16 @@
                                             <a class="name" href='#'>
                                                 Project 1
                                             </a>
-                                            <div class="action">     
-                                                <button class="edit"> <i class="fas fa-pen"></i></button>
-                                                <button class="delete"><i class="far fa-trash-alt"></i></button>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
                                             </div>
                                         </div>     
                                     </div>
@@ -133,9 +166,16 @@
                                             <a class="name" href='#'>
                                                 Project 1
                                             </a>
-                                            <div class="action">     
-                                                <button class="edit"> <i class="fas fa-pen"></i></button>
-                                                <button class="delete"><i class="far fa-trash-alt"></i></button>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
                                             </div>
                                         </div>      
                                     </div>
@@ -160,6 +200,17 @@
                                             <a href='#'>
                                                 Project 1
                                             </a>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
+                                            </div>
                                         </div>      
                                     </div>
                                 </div>
@@ -172,6 +223,17 @@
                                             <a href='#'>
                                                 Project 1
                                             </a>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
+                                            </div>
                                         </div>      
                                     </div>
                                 </div>
@@ -184,6 +246,17 @@
                                             <a href='#'>
                                                 Project 1
                                             </a>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
+                                            </div>
                                         </div>      
                                     </div>
                                 </div>
@@ -196,6 +269,17 @@
                                             <a href='#'>
                                                 Project 1
                                             </a>
+                                            <div class="action menu-action">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </div>
+                                            <div class="list-action">
+                                                <div class="edit-action">
+                                                    Rename
+                                                </div>
+                                                <div class="delete-action">
+                                                    Move to Trash
+                                                </div>
+                                            </div>
                                         </div>      
                                     </div>
                                 </div>
@@ -205,5 +289,8 @@
                 </div>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="../script/dashboard.js"></script>   
     </body>
 </html>
