--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -47,11 +47,19 @@
             <div class="page-content">
                 <header class="header custom-header">
                     <div class="header-right">
-                        <div class="user__login">
-                            <a href="./Login.html">Login</a>
-                        </div>
-                        <div class="user__signup">
-                            <a href="./Signup.html">Signup</a>
+                        <div class="avartar-user">
+                            <div class="avartar">
+                            </div>
+                            <div class="menu-down">
+                                <div class="profile">
+                                    <i class="fas fa-user"></i>
+                                    My profile
+                                </div>
+                                <div class="logout">
+                                    <i class="fas fa-sign-out-alt"></i>
+                                    Logout
+                                </div>
+                            </div>
                         </div>
                     </div>     
                 </header>
