--- a/html/ListStudent.html
+++ b/html/ListStudent.html
@@ -61,34 +61,39 @@
                         Danh sách bài làm của sinh viên:
                     </div>
                     <div class="student-list__table">
-                        <table class="table table-dark">
+                        <table class="container">
                             <thead>
                                 <tr>
-                                    <th>Họ và tên</th>
-                                    <th>Điểm</th>
-                                    <th>Ngày thực hiện</th>
+                                    <th><h1>Họ và tên</h1></th>
+                                    <th><h1>Điểm</h1></th>
+                                    <th><h1>Ngày tạo</h1></th>
+                                    <th style="width:17%"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>Nguyễn Văn A</td>
-                                    <td>9</td>
-                                    <td>21/11/2019</td>
+                                    <td>10</td>
+                                    <td>22/11/2019</td>
+                                    <td class="action"><button class="edit-score">Chấm điểm</button></td>
                                 </tr>
                                 <tr>
                                     <td>Nguyễn Văn A</td>
                                     <td>9</td>
-                                    <td>21/11/2019</td>
+                                    <td>22/11/2019</td>
+                                    <td class="action"><button class="edit-score">Chấm điểm</button></td>
                                 </tr>
                                 <tr>
                                     <td>Nguyễn Văn A</td>
-                                    <td>9</td>
-                                    <td>21/11/2019</td>
+                                    <td>8</td>
+                                    <td>22/11/2019</td>
+                                    <td class="action"><button class="edit-score">Chấm điểm</button></td>
                                 </tr>
                                 <tr>
                                     <td>Nguyễn Văn A</td>
-                                    <td>9</td>
-                                    <td>21/11/2019</td>
+                                    <td>8</td>
+                                    <td>22/11/2019</td>
+                                    <td class="action"><button class="edit-score">Chấm điểm</button></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -96,6 +101,9 @@
                 </div>
             </div>
         </div>
+
+
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
