--- a/html/Course.html
+++ b/html/Course.html
@@ -212,6 +212,9 @@
                             <div class="modal-body__top">
                                 <div class="threads modal-body__item">
                                     <span class="title-modal">Đề bài: </span>Learn how to style and visually organize HTML and CSS.This courses cover version ababababa
+                                    <div class="thread-image">
+                                        <img src="../images/background.jpg">
+                                    </div>
                                 </div>
                                 <div class="status modal-body__item">
                                     <span class="title-modal">Trạng thái:</span> Chưa làm
@@ -223,6 +226,8 @@
                                     <span class="title-modal">Nhận xét:</span> Abc shfjsaf safjsafh kjafsjas
                                 </div>
                             </div>
+                        </div>
+                        <div class="modal-footer">
                             <div class="modal-body__bottom">
                                 <button class="start-exam">Bắt đầu làm bài</button>
                             </div>
