--- a/html/CourseTeacher.html
+++ b/html/CourseTeacher.html
@@ -285,7 +285,8 @@
                                 </div>
                                 <div class="form-group course-image">
                                     <label>Hình ảnh: </label>
-                                    <input type="file" name="image" accept="image/*">
+                                    <input type="file" id="fileUpload" multiple="multiple" name="image" accept="image/*">
+                                    <div id="image-holder"></div>
                                 </div>
                                 <!-- <div class="form-group course-image">
                                     <label>Dsnh sách sinh viên: </label>
@@ -319,7 +320,8 @@
                                 </div>
                                 <div class="form-group course-image">
                                     <label>Hình ảnh: </label>
-                                    <input type="file" name="image" accept="image/*">
+                                    <input type="file" id="edit-fileUpload" multiple="multiple" name="image" accept="image/*">
+                                    <div id="edit-image-holder"></div>
                                 </div>
                                 <!-- <div class="form-group course-image">
                                     <label>Dsnh sách sinh viên: </label>
