--- a/html/PlayCode.html
+++ b/html/PlayCode.html
@@ -53,7 +53,7 @@
                                 </div>
                             </div>
                             <div class="sidebar-item__sublist">
-                                <div class="sublist-item">
+                                <div class="sublist-item active">
                                     <div class="sublist-item__name">
                                         index.html
                                     </div>
